--- a/.github/workflows/calc-action.yml
+++ b/.github/workflows/calc-action.yml
@@ -16,7 +16,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Fetch secrets
+      run: |
+        echo ${{secrets.MY_SECRET}}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,4 +26,4 @@ jobs:
     - name: Run tests
       run: |
         cd src
-        python -m pytest calc.py
+        python -m pytest calc.py      
